--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </button>
             <a href=""target="_blank">
                 <button class="degrade">
-                <span> Projeto...</span>
+                <span> Projeto em andamento...</span>
                 <i> </i>
             
 
