--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </header>
 
         <section>
-            <a href="https://lorennevelin.github.io/calculadora/" target="_blank">
+            <a href="https://lorennevelin.github.io/loja_encanto_feminino/ " target="_blank">
                 <button class="degrade">
-                    <span> Projeto calculadora</span>
+                    <span> Projeto Loja Virtual</span>
                     <i> </i>
 
                 </button>
@@ -32,9 +32,9 @@
                     <i> </i>
 
                 </button>
-            <a href=""target="_blank">
+            <a href="https://lorennevelin.github.io/calculadora/ "target="_blank">
                 <button class="degrade">
-                <span> Projeto em andamento...</span>
+                <span> Projeto Calculadora</span>
                 <i> </i>
             
 
