--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                     <i> </i>
 
                 </button>
+            <a href="https://lorennevelin.github.io/sitenoticias/ " target="_blank">
+                <button class="degrade">
+                    <span> Projeto Site de notícias</span>
+                    <i> </i>
+
+                </button>
 
 
             <a href=" https://lorennevelin.github.io/projeto-_de_voz/ " target="_blank">
