Add link and button for news site project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                     <i> </i>
 
                 </button>
+
+                 <a href="https://lorennevelin.github.io/FastBurger-/ " target="_blank">
+                <button class="degrade">
+                    <span> Projeto Site de notícias</span>
+                    <i> </i>
+
+                </button>
+                     
             <a href="https://lorennevelin.github.io/sitenoticias/ " target="_blank">
                 <button class="degrade">
                     <span> Projeto Site de notícias</span>
