Update button label from 'Projeto Site de notícias' to 'Projeto Fast food'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                  <a href="https://lorennevelin.github.io/FastBurger-/ " target="_blank">
                 <button class="degrade">
-                    <span> Projeto Site de notícias</span>
+                    <span> Projeto Fast food</span>
                     <i> </i>
 
                 </button>
